<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">TravelBuddy</string>

    <string name="region_africa">Africa</string>
    <string name="region_americas">Americas</string>
    <string name="region_asia">Asia</string>
    <string name="region_europe">Europe</string>
    <string name="region_oceania">Oceania</string>
    <string name="region_polar">Polar</string>

    <string name="generic_error">Something has gone wrong</string>

    <string name="title_infos">Basic Information</string>
    <string name="title_map">Map</string>
    <string name="title_timezones">Time Zones</string>
    <string name="title_currencies">Currency Conversion</string>

    <string name="label_region">Region</string>
    <string name="label_area">Area</string>
    <string name="label_iso_code">Alpha-3 code</string>
    <string name="label_population">Population</string>

    <string name="format_area">%1$.0f km²</string>
    <string name="format_money">%1$.2f %2$s</string>

    <string name="empty" />
</resources>
