<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <import type="br.com.caiopo.travelbuddy.model.resolver.Resolvers" />

        <import type="br.com.caiopo.travelbuddy.view.UtilsKt" />

        <variable
            name="country"
            type="br.com.caiopo.travelbuddy.model.entity.Country" />

        <variable
            name="errorConversion"
            type="boolean" />
    </data>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            app:contentPadding="16dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="16dp"
                    android:text="@string/title_infos"
                    android:textAppearance="@style/TextTitle" />

                <com.google.android.flexbox.FlexboxLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:dividerDrawableHorizontal="@drawable/vertical_padding"
                    app:dividerDrawableVertical="@drawable/horizontal_padding"
                    app:flexWrap="wrap"
                    app:showDividerHorizontal="middle"
                    app:showDividerVertical="middle">

                    <include
                        content="@{Resolvers.region.get(country.region)}"
                        label="@{@string/label_region}"
                        layout="@layout/include_label_content" />

                    <include
                        content="@{@string/format_area(country.area)}"
                        label="@{@string/label_area}"
                        layout="@layout/include_label_content" />

                    <include
                        content="@{country.alpha3Code.toUpperCase()}"
                        label="@{@string/label_iso_code}"
                        layout="@layout/include_label_content" />

                    <include
                        content="@{String.valueOf(country.population)}"
                        label="@{@string/label_population}"
                        layout="@layout/include_label_content" />

                </com.google.android.flexbox.FlexboxLayout>
            </LinearLayout>
        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:orientation="vertical"
                tools:ignore="UseCompoundDrawables">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="16dp"
                    android:text="@string/title_currencies"
                    android:textAppearance="@style/TextTitle" />

                <TextView
                    visibleIf="@{errorConversion}"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/generic_error"
                    android:textAppearance="@style/TextInfo" />

                <android.support.v7.widget.RecyclerView
                    android:id="@+id/rv_conversions"
                    visibleIf="@{!errorConversion}"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:layoutManager="android.support.v7.widget.LinearLayoutManager" />

            </LinearLayout>
        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:orientation="vertical"
                tools:ignore="UseCompoundDrawables">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="16dp"
                    android:text="@string/title_timezones"
                    android:textAppearance="@style/TextTitle" />

                <android.support.v7.widget.RecyclerView
                    android:id="@+id/rv_timezones"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:layoutManager="android.support.v7.widget.LinearLayoutManager" />

            </LinearLayout>
        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:orientation="vertical"
                tools:ignore="UseCompoundDrawables">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="16dp"
                    android:text="@string/title_map"
                    android:textAppearance="@style/TextTitle" />

                <ImageView
                    loadImage="@{UtilsKt.createMapUrl(country)}"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:scaleType="centerCrop" />

            </LinearLayout>
        </android.support.v7.widget.CardView>

    </LinearLayout>
</layout>
